--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,4 +1,15 @@
 
+
+body {
+    background:#f1f1f1; /* 仿youtube背景色 */
+}
+
+.navbar-default {
+    background-color: #fff;
+    border:none;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+}
+
 /* footer */
 footer {
     margin-top: 75px;
