--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
+// @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
 // Variables
 @import "variables";
@@ -10,3 +10,7 @@
 
 // 页面基本样式
 @import "./../css/style";
+
+// Markdown
+@import "./../css/vendor/highlight.min";
+@import "./../css/vendor/simplemde.min";
