--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,3 +14,7 @@
 // Markdown
 @import "./../css/vendor/highlight.min";
 @import "./../css/vendor/simplemde.min";
+@import "./../css/vendor/markdown.scss";
+
+// font-awesome
+@import "node_modules/font-awesome/scss/font-awesome";
