add reply-comment using Vuejs

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -108,3 +108,15 @@ footer {
     color: #777;
  }
 
+button.is-naked{
+    background: 0 0;
+    border:none;
+    border-radius: 0;
+    padding:0;
+    height:auto;
+}
+
+.delete-button{
+    color:#3097D1;
+    text-decoration: none;
+}
